# aruco_dcf

./: CMakeLists.txt  README.md
src/: aruco_cvversioning.h  dictionary_based.cpp  fractaldetector.cpp  markerdetector_impl.cpp
src/dcf/: dcf_utils.cpp  dcfmarkermaptracker.cpp  dcfmarkertracker.cpp
src/fractallabelers/: fractallabeler.cpp  fractalposetracker.cpp
utils/: aruco_test.cpp
utils_dcf/: CMakeLists.txt  aruco_dcf.cpp  aruco_dcf_markermap.cpp  package.xml
utils_fractal/: fractal_tracker.cpp
utils_gl/: aruco_test_board_gl_mask.cpp
